Fix overflow

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@ z-index: 3;
 	z-index: 9;
 }
 
+#myself[data-pos="Bas"] {
+	z-index: 3;
+}
+
 #choice-color {
 	z-index: 10;
 	color: white;
